# DE_Project

./: .env.example  README.md  docker-compose.yml  pyproject.toml
configs/: app.yaml  logging.yaml
configs/sql/duckdb/: bootstrap.sql
configs/sql/redshift/: create_events.sql
docs/: architecture_review.md  replay_producer_setup.md
sample_data/: generate_dummy_parquet.py
scripts/: bootstrap_duckdb.py  create_kafka_topics.sh  replay_producer.py  run_all_local.sh
src/redshift_streaming_analytics/: cli.py
src/redshift_streaming_analytics/common/: config.py
src/redshift_streaming_analytics/consumers/: duckdb_consumer.py  redshift_consumer.py
src/redshift_streaming_analytics/dataset/: reader.py
src/redshift_streaming_analytics/producer/: replay.py
src/redshift_streaming_analytics/storage/: duckdb_store.py
src/redshift_streaming_analytics/ui/: app.py
